--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -16,7 +16,7 @@ in this field.
 \end{comment}
 
 \section{ A History of Railway Signalling and Control Systems}
-Initially in the early days of the railway there was not fixed signals as we see today. Instead Policemen, stationed at junctions and railway stations, were charged with signalling train drivers using a system of flags or oil lamps and changing the points of the railway. A major problem of the time, without telecommunications, was that there was no way of locating a train once it went out of sight. This meant that in practice the only safety precaution that could be taken was to delay the departure of trains using an egg timer which would hopefully space out their positions along the track. The level of safety resulting from this precaution was acceptable as train speeds were not relatively high at the time compared with modern railways.
+Initially in the early days of the railway there was not fixed signals as we see today. Instead Policemen, stationed at junctions and railway stations, were charged with signalling train drivers using a system of flags or oil lamps and changing the points\footnote{A point is a physical device that joins two seperate tracks and controls the flow of trains in one direction or the other} of the railway. A major problem of the time, without telecommunications, was that there was no way of locating a train once it went out of sight. This meant that in practice the only safety precaution that could be taken was to delay the departure of trains using an egg timer which would hopefully space out their positions along the track. The level of safety resulting from this precaution was acceptable as train speeds were not relatively high at the time compared with modern railways.
 
 
 \begin{comment}
@@ -32,7 +32,7 @@ not very high during this period so this was an acceptable way of ensuring safet
 \end{comment}
 
 
-The most important type of signal found in the modern railway is the \textbf{fixed signal} which is static, positioned by the side of the track and visually present information to the train driver. The first fixed signals were wooden boards shaped in such a way to provide specific information attached to poles which rotate around a vertical axis. Typically these boards would form a signal instructing the train driver to stop, however if the board was rotated side-on to the driver then it becomes inactive and the driver would proceed if it is safe to do so.
+The most important type of signal found in the modern railway is the \emph{fixed signal} which is static, positioned by the side of the track and visually presents information to the train driver. The first fixed signals were wooden boards shaped in such a way as to provide specific information which were attached to poles and rotate around a vertical axis. Typically these boards would form a signal instructing the train driver to stop; however if the board was rotated side-on to the driver then it becomes inactive and the driver would proceed if it was safe to do so.
 
 \begin{comment}
 Modern railway signally makes use of \textbf{fixed signals}. These are permanently positioned
@@ -44,7 +44,7 @@ see the board because it was side-on to him then he would be able to
 proceed.
 \end{comment}
 
-The next major enhancement of these signals came in the form of the \textbf{Semaphore} fixed signal.  Instead of having 2 positions (visible/ not visible), the boards of a semaphore signal could be moved into one of several predetermined positions. The most common of these signals had 3 visible positions or aspects in which they could be placed which would rely the following information to an approaching driver: proceed if its safe, proceed with caution if its safe and stop.
+The next major enhancement of these signals came in the form of the \emph{semaphore} fixed signal.  Instead of having two positions (visible/ not visible), the boards of a semaphore signal could be moved into one of several predetermined positions. The most common of these signals had three visible positions or aspects in which they could be placed which would relay the following information to an approaching driver: proceed if it's safe, proceed with caution if it's safe and stop.
 
 \begin{comment}
 One of the major developments in railway signalling was the introduction of
@@ -55,7 +55,7 @@ proceed, another that indicates the driver can proceed with caution and
 finally an aspect which indicates that the driver should stop. 
 \end{comment}
 
-The introduction of the semaphore signal also foreshadowed another major change in the system for controlling the signals behind the scenes.  A new band of professional \textbf{Signallers} were employed to specifically manage the railways, replacing the Policemen that proceeded them in the progress. The efficiency of signal control was also improved by a system of wires, pulleys and levers which enabled multiple signals and points to be controlled from a central position. This central position was typically enclosed in a box giving rise to the name \textbf{signal box} which were typically manned by one or more signallers. The controlling signals and points from the centrality of the signal box also enabled for more safety mechanisms to be installed. The most prominent of these the \textbf{interlocking} shall be the subject of interest to us in later chapters. The interlocking physically prevented the control system of a railway from unsafe state by physically locking levers.
+The introduction of the semaphore signal also foreshadowed another major change in the system for controlling the signals behind the scenes.  A new band of professional \emph{signallers} were employed to specifically manage the railways, replacing the policemen that proceeded them in the progress. The efficiency of signal control was also improved by a system of wires, pulleys and levers which enabled multiple signals and points to be controlled from a central position. This central position was typically enclosed in a box -- giving rise to the name \emph{signal box} -- which was typically manned by one or more signallers. The controlling signals and points from the centrality of the signal box also enabled for more safety mechanisms to be installed. The most prominent of these -- the \emph{interlocking}  -- shall be the subject of interest to us in later chapters. The interlocking physically prevented the control system of a railway from entering an unsafe state by physically locking levers.
 
 
 \begin{comment}
@@ -70,7 +70,7 @@ safety mechanisms to be installed. One in particular, namely the \textbf{interlo
 is of interest to us. The interlocking physically locked levers if they were
 unsafe to move.
 \end{comment}
-The advent of electricity brought about a further advance in railway technology, allowing for the development of the \textbf{track circuit}. When a train was on a segment of track it completed the circuit between the two rails and light up an indicator in the signal box. As more track circuits were deployed it became possible to control certain signals without human intervention. These \textbf{automatic signals} were completely operated by track circuits and prevented trains from entering a segment of track behind a signal already containing a train. Electric motors enabled the construction of electric point machines enabling the signaller to electronically control a point at a great distance with little physical effort. The area control by each signal box was greatly increased along with the number of signals controllable by one signaller. Electromechanical \textbf{relays} were introduced as a replacement for the solely mechanical relays reducing the size of each signal box and its footprint on the landscape.
+The advent of electricity brought about a further advance in railway technology, allowing for the development of the \textbf{track circuit}. When a train was on a segment of track it completed the circuit between the two rails and lit up an indicator in the signal box. As more track circuits were deployed it became possible to control certain signals without human intervention. These \textbf{automatic signals} were completely operated by track circuits and prevented trains from entering a segment of track behind a signal already containing a train. Electric motors enabled the construction of electric point machines enabling the signaller to electronically control a point at a great distance with little physical effort. The area controlled by each signal box was greatly increased along with the number of signals controllable by one signaller. Electromechanical \textbf{relays} were introduced as a replacement for the solely mechanical relays reducing the size of each signal box and its footprint on the landscape.
 \begin{comment}
 The next leap in railway technology came from the invention of the electronic
 \textbf{track circuit}. These would activate an indicator in the signal box if a
@@ -86,10 +86,10 @@ reducing the amount of space needed for a signal box.
 \end{comment}
 
 Further instances of an electrical system replacing a mechanical one occurred in the 1920s and subsequently in the 1930s. New \textbf{colour light signals} replaced  the mechanical semaphore signals and had the advantage of being brighter than the oil lamps of that signal.
-Electronic \textbf{control panels}, which contained switches and buttons, replaced the mechanical levers and removed the remaining physical effort needed to operate signalling systems. The combination of track circuits, electronic points and control panels enabled the introduction of \textbf{route setting} where by at the press of a single button a configuration of signals and points could be selected thus enabling a train to travel down a particular route along the track.
+Electronic \textbf{control panels}, which contained switches and buttons, replaced the mechanical levers and removed the remaining physical effort needed to operate signalling systems. The combination of track circuits, electronic points and control panels enabled the introduction of \textbf{route setting} whereby at the press of a single button a configuration of signals and points could be selected thus enabling a train to travel down a particular route along the track.
 
 The next major advancement came some 50 years later and was enabled by the development of microprocessors. The relays and mechanical interlockings were replaced with \textbf{solid state interlockings} which were smaller still and more reliable than relay interlockings.
-These solid state interlockings are one of the systems verified later on in the PhD. Jump forward another 30 years to the current day and we are seeing the development and deployment of a new type of control system which makes use of recent technologies such as GPS, GMS radio  communications that enable signallers to have a far finer grain of control when compared with the discrete track circuits and do not need the physical coloured light signals to function. One such instance of a control system is the European Rail Traffic Management System which is discussed in more detail in Chapter \ref{blah}
+These solid state interlockings are one of the systems verified later on in chapter \ref{chapter:dpllapp}. Jump forward another 30 years to the current day and we are seeing the development and deployment of a new type of control system which makes use of recent technologies such as GPS and GMS radio  communications that enable signallers to have a far finer grain of control when compared with the discrete track circuits and do not need the physical coloured light signals to function. One such instance of a control system is the European Rail Traffic Management System which is discussed in more detail in Chapter \ref{chapter:ERTMS}
 \begin{comment}
 In the 1920s \textbf{colour light signals} replaced mechanical semaphore signals these where much brighter than the oil
 lamps fitted to semaphores and greatly increased the safety of night time
@@ -107,7 +107,7 @@ of such solid state interlockings.
 \section{Invensys Rail}
 
 Siemens Rail Automation \cite{Siemens} has been producing train control equipment and safety devices for over 140 years starting with its original incarnation Westinghouse Rail Systems Ltd and subsequent incarnation Invensys Rail. 
-The first such safety device was train air brakes, if the power was cut from the train then the brake would automatically kick in, entering a failsafe state. The company was also charged with supporting British Rail in its development of the first solid state digital railway interlocking to be installed in Leamington Spa. Currently their operations are focused on supplying railway control systems globally with customers in Australia, Hong Kong, Germany , Spain and the UK. One of the products produced by Invensys that we are interesting in is  a solid state interlocking called the Westrace. This interlocking continually receives input from the railway, decides whether or not a request or railway state is safe using a Ladder Logic program and prevents the railway from entering unsafe states. This ladder logic will be explained later in this chapter. Further information on the railway domain including terminology and methodology can be found in a book by David Kerr and Tony Rowbotham (See \cite{KR01}.)
+The first such safety device was train air brakes; if the power was cut from the train then the brake would automatically kick in, entering a failsafe state. The company was also charged with supporting British Rail in its development of the first solid state digital railway interlocking to be installed in Leamington Spa. Currently their operations are focused on supplying railway control systems globally with customers in Australia, Hong Kong, Germany , Spain and the UK. One of the products produced by Invensys that we are interesting in is  a solid state interlocking called the Westrace. This interlocking continually receives input from the railway, decides whether or not a request or railway state is safe using a \emph{ladder logic} program and prevents the railway from entering unsafe states. This ladder logic will be explained later in this chapter. Further information on the railway domain including terminology and methodology can be found in a book by David Kerr and Tony Rowbotham (See \cite{KR01}.)
 \begin{comment}
 
 Originally they produced air brakes for trains, these had a
@@ -128,7 +128,7 @@ Invensys (See \cite{KR01}).
 \section{An Overview of the Railway Domain} 
 In this section we present the features of the railway domain that are in
 the scope of this thesis. We hope to provide the reader with the background
-information and terminology necessary to understand the parts of this thesis.
+information and terminology necessary to understand later chapters.
 
 
 \subsection{The Railway Topology: Track and Points}
@@ -205,7 +205,7 @@ topology of the railway a more detailed description can be found in \cite{KR01}
 
 \subsubsection{Track Segments}
 
-In fig \ref{fig:track}  there are 4 track segments $A,B,C,D$ which is typical of a junction containing a single point. Each track segment contains a track circuit for the purpose of detecting whether it is occupied by a train or not. When a train is present on a segment of track the metal wheels and axle complete the circuit and allow the control system to detect its presence. It is possible for a train to be longer than a track segment and this is particularly the case at junctions other areas where a large amount of control is needed over trains. A shorter track segment allows for a finer grain view of the railway by the interlocking and control system and can allow for a greater through put of trains. Conversely the length of track segments can be far longer on long straight segments of track without any interesting features such as junctions or stations.
+In fig \ref{fig:track}  there are 4 track segments $A,B,C,D$ which is typical of a junction containing a single point. Each track segment contains a track circuit for the purpose of detecting whether it is occupied by a train or not. When a train is present on a segment of track the metal wheels and axle complete the circuit and allow the control system to detect its presence. It is possible for a train to be longer than a track segment and this is particularly the case at junctions and other areas where a large amount of control is needed over trains. A shorter track segment allows for a finer grain view of the railway by the interlocking and control system and can allow for a greater throughput of trains. Conversely the length of track segments can be far longer on long straight segments of track without any interesting features such as junctions or stations.
 
 \begin{comment}
 A section of track is typically broken down into track segments each
@@ -218,7 +218,7 @@ where control over train movement is of greater importance.
 
 
 \subsubsection{Points}
-Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track is needed and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is refered to as \textbf{reverse}  or is inactive which is referred to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a railway hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in fig \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
+Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is referred to as \textbf{reverse}  or is inactive which is referred to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a train hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in fig \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
 
 \begin{comment}
 A point is a physical piece of equipment that is used to 
@@ -233,7 +233,7 @@ position for normal then the train will be derailed.
 
 
 \subsection{Railway Signalling}
-Currently the main way of communicating information between the control system and the train driver is through track side signals. These are normally placed either on a over hanging gantry or either side of the track. These signals function by visually conveying information to the driver typically in the form of different  aspects each of which has its own particular meaning. The most important signal from the point of view of this project is the coloured light signal. Most signals found on the UK railways have between 1 and 4 aspects on average each providing the driver with different information. We describe typical colours and combinations of aspects in the below table:
+Currently the main way of communicating information between the control system and the train driver is through track side signals. These are normally placed either on an overhanging gantry or on either side of the track. These signals function by visually conveying information to the driver typically in the form of different  aspects each of which has its own particular meaning. The most important signal from the point of view of this project is the coloured light signal. Most signals found on the UK railways have between one and four aspects on average, each providing the driver with different information. We describe typical colours and combinations of aspects below:
 
 \begin{comment}
 Signals are the main means used to communicate information regarding the state
@@ -283,7 +283,7 @@ aspects used for a three light signal.
 \item[Green] -  The driver is clear to proceed down the track at full speed to the next signal as long as it is safe to do so. The track ahead is clear for a sufficient distance.
 \end{description}
 
-Other types of signal are normally used in more specific circumstances to control trains on certain types of track.  There are normally single aspect fixed red signals at the ends of tracks that provide permanent indicators not to proceed to approaching drivers. On a low speed segments of track a two aspect signal may be used if the stopping distance of approaching trains is short. Whereas on heigh speed segments of track, where the stopped distances are long, 4 aspect signals may be used with two amber signals in order to provide information about the following two signals. This forms part of the standard signalling scheme in the UK however there are no international standards or consensus. Every country has its own particular singalling scheme with their own conventions on the colour and number of signals used. 
+Other types of signal are normally used in more specific circumstances to control trains on certain types of track.  There are normally single aspect fixed red signals at the ends of tracks that provide permanent indicators not to proceed to approaching drivers. On a low speed segments of track a two aspect signal may be used if the braking distance (See chapter \ref{sec:lawsofmotion} for definition) of approaching trains is short. Whereas on high speed segments of track, where the  braking distances are long, four aspect signals may be used with two amber signals in order to provide information about the following two signals. This forms part of the standard signalling scheme in the UK; however, there are no international standards or consensus. Every country has its own particular signalling scheme with it's own conventions on the colour and number of signals used. 
 
 \begin{comment}
 The one aspect signal is typically a fixed red indicating that is not possible
@@ -302,7 +302,7 @@ colours and number of lights on each signal.
 
 \subsection{The Westrace Interlocking}
 
-Railway interlockings are critical components of the railway with the sole purpose of enforcing a safe stating by acting as a safety kernel between the control system and the physical railway. It repeatedly receives commands and instructions from the control system and then applies a set of rules to check the the state of the railway following the application of the control signals is safe. If the control signals pass this safety check then they are committed to the physical railway in the next cycle. For example if some human inputted schedule requests a route the interlocking will check that the route setting of the route does not conflict with any other routes currently set or any other signalling principles. If these tests are passed then the route  is set in the physical railway in the next cycle.
+Railway interlockings are critical components of the railway with the sole purpose of enforcing a safe state by acting as a safety kernel between the control system and the physical railway. A solid state interlocking repeatedly receives commands and instructions from the control system and then applies a set of rules to check the state of the railway following the application of the control signals is safe. If the control signals pass this safety check then they are committed to the physical railway in the next cycle. For example if some human inputted schedule requests a route the interlocking will check that the route setting of the route does not conflict with any other routes currently set or any other signalling principles. If these tests are passed then the route  is set in the physical railway in the next cycle.
 
 \begin{comment}
 The railway interlocking is a key component in ensuring the safety of the
@@ -348,7 +348,7 @@ before allowing the command to be passed to the physical railway.
 \label{fig:trackstate}
 \end{figure}
 
-The interlocking repeatedly executes a program or a set of rules based on a cycle induced by a discrete timer. On every cycle the rules are applied to a new set of inputs which are read  before committing them as outputs. The Westrace interlocking developed by Siemens executes a so-called ladder logic program on the interlocking which forms the rule set described previously.  In the following we shall describe the 3 stages of operation in the execution of the Westrace interlocking.
+The interlocking repeatedly executes a program or a set of rules based on a cycle induced by a discrete timer. On every cycle the rules are applied to a new set of inputs which are read  before committing them as outputs. The Westrace interlocking developed by Siemens executes a so-called ladder logic program on the interlocking which forms the rule set described previously.  In the following we shall describe the three stages of operation in the execution of the Westrace interlocking.
 
 
 \begin{comment}
@@ -364,11 +364,11 @@ Westrace interlocking.
 
 \begin{description}
 
-\item[Reading of Inputs] - Process input signals from both the control system and the phsycial railway.
+\item[Reading of Inputs] - Process input signals from both the control system and the physical railway.
 
 \item[Internal Processing] - Using the inputs execute the ladder logic program in order to calculate the outputs. 
 
-\item[Committing of Outputs] - Transmitt the calculated outputs as control signals to the railway and feedback this information to the control system.
+\item[Committing of Outputs] - Transmit the calculated outputs as control signals to the railway and feed this information back to the control system.
 
 \end{description}
 
@@ -377,7 +377,7 @@ Westrace interlocking.
 
 \section{Ladder Logic}
 
-The Westrace Interlocking executes a ladder logic program \cite{IEC03} in order to perform calculations. In the following I shall present a more detailed description of a ladder logic program from the point of view of its fundemental constructs.  
+The Westrace interlocking executes a ladder logic program \cite{IEC03} in order to perform calculations. In the following I shall present a more detailed description of a ladder logic program from the point of view of its fundamental constructs.  
 
 \begin{comment}
 The Westrace Interlocking performs calculations by executing a ladder logic
@@ -387,7 +387,7 @@ behaviour will be presented. In later chapters we will provide a formal framewor
 for the verification of these programs.
 \end{comment}
 
-There is an international standard that governs the graphical  ladder logic language for programmable logic controllers IEC 61131 \cite{IEC03}. The appearence of the ladder logic was designed with control engineers in mind which has led to its graphical ``ladder" like appearance. The ladder consists of rungs, each of which computes an output variable from one or more input variables on the rung. These inputs maybe true inputs to the system or they maybe previously computed outputs from higher up in the ladder.  It is a convention in the railway industry to refer to the input variables as contacts and the output variables as coils. In the following we give a more indepth description of these variables:
+There is an international standard that governs the graphical  ladder logic language for programmable logic controllers: IEC 61131 \cite{IEC03}. The appearance of the ladder logic was designed with control engineers in mind which has led to its graphical ``ladder" like appearance. The ladder consists of rungs, each of which computes an output variable from one or more input variables on the rung. These inputs may be true inputs to the system or they may be previously computed outputs from higher up in the ladder.  It is a convention in the railway industry to refer to the input variables as \emph{contacts} and the output variables as \emph{coils}. In the following we give a more in depth description of these variables:
 
 \begin{comment}
 The international standard for programmable logic controllers IEC
@@ -404,7 +404,7 @@ is as follows:
 
 \begin{description}
 
-\item[Coils]: A coil represents a value that is both output from the program and stored for later use.  We call the process of computing outputs from inputs and previous outputs the firing of a rung. Graphically, the rungs of a ladder are always laid out so that the coil is the right most entity. Its value is computed from left to right using the input variables and connectives.
+\item[Coils]: A coil represents a value that is both output from the program and stored for later use.  We call the process of computing outputs from inputs and previous outputs the firing of a rung. Graphically, the rungs of a ladder are always laid out so that the coil is the rightmost entity. Its value is computed from left to right using the input variables and connectives.
 
 \item[Open Contacts]: The entity of the ladder logic diagram used to represent an un-negated variable.
 
@@ -415,7 +415,7 @@ is as follows:
   and output from the program. The value of a coil is calculated when a rung
   fires making use of the current set of inputs, the previous set of outputs
   and any outputs already computed for this cycle. The coil is always the
-  right most entity of the rung and its value is computed by executing the
+  rightmost entity of the rung and its value is computed by executing the
   rung from left to right.
 
 
@@ -456,7 +456,7 @@ is as follows:
 
 \medskip
 
-The semantics of a given ladder logic run is determined by the entities and the connections between them.  The horizontal and vertical connections have separate meanings and each will compute a different result for the coil connected to them.
+The semantics of a given ladder logic rung is determined by the entities and the connections between them.  The horizontal and vertical connections have separate meanings and each will compute a different result for the coil connected to them.
 Semantically these graphical connectives can be viewed as connectives in propositional logic. The horizontal connector represents a conjunction of the two variables it connects and a vertical connection represents disjunction between two variables see Fig \ref{fig:ladderconnectives}.
 
 
@@ -502,18 +502,18 @@ programs using propositional logic.
 \end{comment}
 
 \section{Previous Work in this Field}
-There has been many different approaches to verify ladder logic using different tools and techniques. In the following we shall first present several approaches developed at the home research group of the author and secondly look at work from other institutions and organisations. 
+There have been many different approaches to verify ladder logic using different tools and techniques. In the following we shall first present several approaches developed at the home research group of the author and secondly look at work from other institutions and organisations. 
 
 
-The Swansea University Railway Verification Group has produced 3 successful MRes These and 2 successful PhD These on this topic each with their own particular focus. The original group work on the project was carried out by Kanso (See \cite{KK08}), as part of an MRes project,  who invented an approach to translate ladder logic into propositional logic to which he then applied inductive verification using a SAT solver \cite{KK09} using the method described in \cite{MS00}. This approach was applied to a small academic example pelicon crossing and a real world railway interlocking program consisting of approximately 500 rungs. The work done by Kanso was extended by James in another MRes project \cite{PJ10} that applied program slicing to reduce the size of the model checking problem and bounded model checking and temporal induction to verify the interlockings and possibly obtain a counter example in the process. James also verified another interlocking of a similar size to the original one but with a different layout. The author verified 100 safety conditions over a solid state interlocking and modelled the railway in a modular fashion using the  \scade \, suite in the scope of his MRes thesis. A summary of the work peformed in these three these can be found in \cite{AL14a}. These three MRes projects were themselves inspired by far earlier work in the form of a feasibility study by Fokkink and Hollingshead \cite{WF98}. Fokkink laid much of the logical foundation by connecting ladder logic with propositional logic and formulated a method for presenting such a ladder logic program as a propositional formulae.
+The Swansea University Railway Verification Group has produced three successful MRes theses and 2 successful PhD theses on this topic each with it's own particular focus. The original group work on the project was carried out by Kanso (See~\cite{KK08}), as part of an MRes project,  who invented an approach to translate ladder logic into propositional logic to which he then applied inductive verification using a SAT solver~\cite{KK09} an the method described in~\cite{MS00}. This approach was applied to a small academic example pelicon crossing and a real world railway interlocking program consisting of approximately 500 rungs. The work done by Kanso was extended by James in another MRes project~\cite{PJ10} that applied program slicing to reduce the size of the model checking problem and bounded model checking and temporal induction to verify the interlockings and possibly obtain a counterexample in the process. James also verified another interlocking of a similar size to the original one but with a different layout. The author verified 100 safety conditions over a solid state interlocking and modelled the railway in a modular fashion using the  \scade \, suite in the scope of his MRes thesis. A summary of the work peformed in these three theses can be found in~\cite{AL14a}. These three MRes projects were themselves inspired by far earlier work in the form of a feasibility study by Fokkink and Hollingshead~\cite{WF98}. Fokkink laid much of the logical foundation by connecting ladder logic with propositional logic and formulated a method for presenting such a ladder logic program as propositional formulae.
 
-Kanso also produced a PhD thesis \cite{KarimPhD} which described various approaches to use the interactive theorem prover Agda as a verification platform for train control systems. This thesis also describe a unique way of combining interactive and automatic theorem provers in a lazy fashion such that a proof object was constructed in agda for the automatic proof as well as the interactive proof \cite{KarimPaper}. Lemmas were proven that showed high level safety properties such as "two trains do not crash" can be proven from low level properties that refer to  signalling principles. These high level lemmas were proven once interactively and hold for all track plans. Using these high level lemmas, automatic theorem provers could then prove safety for a given railway by automatically verifying a set of safety properties refering to signalling principles.
+Kanso also produced a PhD thesis~\cite{KarimPhD} which described various approaches to use the interactive theorem prover Agda as a verification platform for train control systems. This thesis also describes a unique way of combining interactive and automatic theorem provers in a lazy fashion such that a proof object was constructed in Agda for the automatic proof as well as the interactive proof \cite{KarimPaper}. Lemmas were proven that showed high level safety properties such as "two trains do not crash" can be proven from low level properties that refer to  signalling principles. These high level lemmas were proven once interactively and hold for all track plans. Using these high level lemmas, automatic theorem provers could then prove safety for a given railway by automatically verifying a set of safety properties referring to signalling principles.
 
-James in his thesis went on to work on domain specific languages for railway verification and delivered a platform which could verify graphical track plans from the railway domain automatically  \cite{PhilPhD}.
+James in his thesis went on to work on domain specific languages for railway verification and delivered a platform which could verify graphical track plans from the railway domain automatically~\cite{PhilPhD}.
 
-The Safecap project was a joint collaboration between researchers at Swansea and Newcastle University to look into modelling capacity and its relationship with safety on the railway \cite{YI12}. It resulted in a new specification formalism CSP$\parallel$B being used to model a double junction \cite{FM12}. This is complicated from a verification point of view as there are many different possibilities for train movements but it was never the less verified using the ProB tool. This project also resulted in an approach to verify segments of railways in a modular fashion i.e. the verification of a segment of track is implied by verification of its constituent components \cite{FM12b}.
+The Safecap project was a joint collaboration between researchers at Swansea and Newcastle University to look into modelling capacity and its relationship with safety on the railway~\cite{YI12}. It resulted in a new specification formalism CSP$\parallel$B being used to model a double junction~\cite{FM12}. This is complicated from a verification point of view as there are many different possibilities for train movements but it was nevertheless verified using the ProB tool~\cite{ProB}. This project also resulted in an approach to verify segments of railways in a modular fashion i.e. the verification of a segment of track is implied by verification of its constituent components~\cite{FM12b}.
 
-Outside of Swansea, A number of other approaches have been developed to verify train control systems. The SPIN model checker has been successfully applied to verify railway interlockings \cite{AC98}.
+Outside of Swansea, a number of other approaches have been developed to verify train control systems. The SPIN model checker has been successfully applied to verify railway interlockings~\cite{AC98}.
 
 
 \begin{comment}
