--- a/lit.bib
+++ b/lit.bib
@@ -1111,6 +1111,20 @@
   series = {Lecture Notes in Computer Science}
 }
 
+@INPROCEEDINGS{ProB,
+  author = {Leuschel, M. and Butler, M.},
+  title = {ProB: A Model Checker for B},
+  booktitle = {FME 2003: Formal Methods},
+  year = {2003},
+  editor = {Araki, K. and Gnesi, S. and Mandrioli, D.},
+  volume = {2805},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {855--874},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.08.12}
+}
+
 @INPROCEEDINGS{YL11,
   author = {Liu, Y. and Tang, T. and Liu, J. and Zhao, L. Xu, T.},
   title = {Formal modeling and verification of RBC handover of ETCS using Differential
